# clone-tools

./: .travis.yml  CMakeLists.txt  README.md  mkdocs.yml
docs/: about.md  clone_ptr.md  extra.css  home.md  index.md  mkdocs_extra.css
docs/reference/: clone_ptr.md
docs/reference/utility/: index.md
include/clone/: clone_ptr.hpp  take_clone.hpp  utility.hpp
include/clone/detail/: is_cloneable.hpp  is_member_cloneable_base.hpp  make_static_const.hpp  make_unique.hpp  not_the_same_thing.hpp  tag.hpp  type_trait_helper.hpp
include/clone/type/: is_clone_ptr.hpp  is_unique_ptr.hpp
include/clone/type/detail/: is_template_of_type.hpp  void_t.hpp
test_src/: CMakeLists.suffix.txt  CMakeLists.txt
test_src/catch/: README.md
test_src/test/: build_test.cpp  clone_ptr_test.cpp  is_clone_ptr_test.cpp  is_unique_ptr_test.cpp  take_clone_test.cpp
test_src/test/support/: example_cloner.hpp
